New seek time display (required label strings)

--- a/skin.aeonmq5.isengardmod/language/English/strings.po
+++ b/skin.aeonmq5.isengardmod/language/English/strings.po
@@ -4228,6 +4228,11 @@ msgstr "DELETE GROUP"
 msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
 msgstr "AVAILABLE[CR]GROUPS"
+
+msgctxt "#31997
+msgid "SEEKING"
+msgtxt "SEEKING"
+
 msgctxt "#31999"
 msgid ""
 "The Original Aeon Skin and its name are intelectual property of djh_. The "
