--- a/skin.aeonmq5.isengardmod/language/English (US)/strings.po
+++ b/skin.aeonmq5.isengardmod/language/English (US)/strings.po
@@ -4231,6 +4231,10 @@ msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
 msgstr "AVAILABLE[CR]GROUPS"
 
+msgctxt "#31997
+msgid "SEEKING"
+msgtxt "SEEKING"
+
 msgctxt "#31999"
 msgid ""
 "The Original Aeon Skin and its name are intelectual property of djh_. The "
