--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -1,3 +1,11 @@
+[B][COLOR=FFFF8C00]BUILD 7.1.8 - RELEASE DATE 05/01/2015[/COLOR][/B]
+Added:  Live TV recordings is now available to be added to the main menu via customize main menu
+Improved:  Now recording/Next recording slide in popup provided for both Live TV-EPG and Live TV-Recordings when set as main menu items
+Improved:  Added MPAA flags for French video
+Fixed:  Multiplex view panel display time brought up wrong dialog window
+Fixed:  Live TV Recordings wide view now has correct focus shading and scrollbar 
+Fixed:  Recently added movies widgets now bring up dialog on click to play/resume/launch cinema experience
+Fixed:  It is now possible to set episode bookmarks for tv shows with multiple episodes per file
 [B][COLOR=FFFF8C00]BUILD 7.1.7 - INITIAL RELEASE FOR ISENGARD DATE 03/05/2015[/COLOR][/B]
 
 Added:  Live TV EPG is now available to be added to the main menu via customize main menu
