--- a/skin.aeonmq5.isengardmod/language/English (US)/strings.po
+++ b/skin.aeonmq5.isengardmod/language/English (US)/strings.po
@@ -3750,6 +3750,9 @@ msgstr "SEASON"
 msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr "EPG:CHANNEL"
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
 
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
@@ -4231,9 +4234,9 @@ msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
 msgstr "AVAILABLE[CR]GROUPS"
 
-msgctxt "#31997
+msgctxt "#31997"
 msgid "SEEKING"
-msgtxt "SEEKING"
+msgstr "SEEKING"
 
 msgctxt "#31999"
 msgid ""
