--- a/skin.aeonmq5.isengardmod/language/English/strings.po
+++ b/skin.aeonmq5.isengardmod/language/English/strings.po
@@ -3752,6 +3752,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr "EPG:CHANNEL"
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
@@ -4229,9 +4233,9 @@ msgctxt "#31996"
 msgid "AVAILABLE[CR]GROUPS"
 msgstr "AVAILABLE[CR]GROUPS"
 
-msgctxt "#31997
+msgctxt "#31997"
 msgid "SEEKING"
-msgtxt "SEEKING"
+msgstr "SEEKING"
 
 msgctxt "#31999"
 msgid ""
