--- a/skin.aeonmq5.isengardmod/language/French/strings.po
+++ b/skin.aeonmq5.isengardmod/language/French/strings.po
@@ -3751,6 +3751,10 @@ msgctxt "#31876"
 msgid "SEASON"
 msgstr "SAISON"
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "UTILISER UN PACK EXTERNE DE BOITIERS MEDIA (DÉFINI PAR L'UTILISATEUR)"
