--- a/skin.aeonmq5.isengardmod/language/Galician/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Galician/strings.po
@@ -3754,6 +3754,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr ""
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "USAR CAIXAS DE PAQUETE EXTERNO (DEFINIDO POLO USUARIO)"
