--- a/skin.aeonmq5.isengardmod/language/Korean/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Korean/strings.po
@@ -3755,6 +3755,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr ""
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "외부 미디어 케이스 패키지 사용 (사용자 정의)"
