--- a/skin.aeonmq5.isengardmod/language/Polish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Polish/strings.po
@@ -3758,6 +3758,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr ""
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "UŻYWAJ ZEWNĘTRZNEGO PAKIETU PUDEŁEK (UŻYTKOWNIKA)"
