--- a/skin.aeonmq5.isengardmod/language/Russian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Russian/strings.po
@@ -3762,6 +3762,10 @@ msgctxt "#31877"
 msgid "EPG:CHANNEL"
 msgstr ""
 
+msgctxt "#31878"
+msgid "SHELFCASE"
+msgstr "SHELFCASE"
+
 msgctxt "#31879"
 msgid "USE EXTERNAL MEDIA CASES OF PACKAGE (USER DEFINED)"
 msgstr "ИСПОЛЬЗОВАТЬ ВНЕШНИЙ ПАКЕТ УПАКОВОК МЕДИА (ОПРЕДЕЛЁННЫЙ ПОЛЬЗОВАТЕЛЕМ)"
