--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -1,3 +1,8 @@
+[B][COLOR=FFFF8C00]BUILD 7.1.9 - RELEASE DATE 05/25/2015[/COLOR][/B]
+Added:  New video view "shelfcase"
+Fixed:  During video playback, SEEKING setting will only display during active Seek
+Fixed:  Additional Isengard GUI mods
+
 [B][COLOR=FFFF8C00]BUILD 7.1.8 - RELEASE DATE 05/01/2015[/COLOR][/B]
 Added:  Live TV recordings is now available to be added to the main menu via customize main menu
 Improved:  Now recording/Next recording slide in popup provided for both Live TV-EPG and Live TV-Recordings when set as main menu items
