--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -2,6 +2,7 @@
 Added:  New video view "shelfcase"
 Fixed:  During video playback, SEEKING setting will only display during active Seek
 Fixed:  Additional Isengard GUI mods
+Fixed:  Genre icon issue in Panel View
 
 [B][COLOR=FFFF8C00]BUILD 7.1.8 - RELEASE DATE 05/01/2015[/COLOR][/B]
 Added:  Live TV recordings is now available to be added to the main menu via customize main menu
