Update Rom collection Browser

--- a/skin.aeonmq5.isengardmod/language/Arabic/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Arabic/strings.po
@@ -3955,7 +3955,7 @@ msgid "BOX BACK"
 msgstr "خلف الصندوق"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
+msgid "CARTRIDGE"
 msgstr "كارتريدج"
 
 msgctxt "#31927"
