--- a/skin.aeonmq5.isengardmod/language/Finnish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Finnish/strings.po
@@ -3952,7 +3952,7 @@ msgid "BOX BACK"
 msgstr "TAKAKANSI"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
+msgid "CARTRIDGE"
 msgstr "KOTELO"
 
 msgctxt "#31927"
