--- a/skin.aeonmq5.isengardmod/language/Hungarian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Hungarian/strings.po
@@ -3952,8 +3952,8 @@ msgid "BOX BACK"
 msgstr "HÁTSÓ BORÍTÓ"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
-msgstr "CARTDRIGE"
+msgid "CARTRIDGE"
+msgstr "CARTRIDGE"
 
 msgctxt "#31927"
 msgid "SCREENSHOT"
