--- a/skin.aeonmq5.isengardmod/language/Portuguese (Brazil)/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Portuguese (Brazil)/strings.po
@@ -3951,7 +3951,7 @@ msgid "BOX BACK"
 msgstr "FUNDO DA CAIXA"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
+msgid "CARTRIDGE"
 msgstr "CARTUCHO"
 
 msgctxt "#31927"
