--- a/skin.aeonmq5.isengardmod/language/Spanish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Spanish/strings.po
@@ -3958,7 +3958,7 @@ msgid "BOX BACK"
 msgstr "PARTE TRASERA DE LA CAJA"
 
 msgctxt "#31926"
-msgid "CARTDRIGE"
+msgid "CARTRIDGE"
 msgstr "CARTUCHO"
 
 msgctxt "#31927"
