Change label 31067 from TV GUIDE to NEXT AIRED GUIDE
deconflicts with changed Kodi label GUIDE

--- a/skin.aeonmq5.isengardmod/language/Catalan/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Catalan/strings.po
@@ -418,7 +418,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "GUIA DE TV"
+msgstr "GUIA DE NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
