--- a/skin.aeonmq5.isengardmod/language/Czech/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Czech/strings.po
@@ -420,7 +420,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TELEVIZNÍ PROGRAM"
+msgstr "NEXT AIRED PROGRAM"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
