--- a/skin.aeonmq5.isengardmod/language/Danish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Danish/strings.po
@@ -422,7 +422,7 @@ msgstr "BIOGRAFOPLEVELSE"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV GUIDE"
+msgstr "NEXT AIRED GUIDE"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
