--- a/skin.aeonmq5.isengardmod/language/Turkish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Turkish/strings.po
@@ -421,7 +421,7 @@ msgstr "SİNEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV REHBERI"
+msgstr "NEXT AIRED REHBERI"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
