--- a/skin.aeonmq5.isengardmod/language/Dutch/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Dutch/strings.po
@@ -423,7 +423,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV GIDS"
+msgstr "NEXT AIRED GIDS"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
