--- a/skin.aeonmq5.isengardmod/language/English/strings.po
+++ b/skin.aeonmq5.isengardmod/language/English/strings.po
@@ -417,7 +417,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV GUIDE"
+msgstr "NEXT AIRED GUIDE"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
