--- a/skin.aeonmq5.isengardmod/language/French/strings.po
+++ b/skin.aeonmq5.isengardmod/language/French/strings.po
@@ -428,7 +428,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "PROGRAMME TELE"
+msgstr "PROGRAMME NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
