--- a/skin.aeonmq5.isengardmod/language/Polish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Polish/strings.po
@@ -423,7 +423,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "PROGRAM TV"
+msgstr "PROGRAM NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
