--- a/skin.aeonmq5.isengardmod/language/Romanian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Romanian/strings.po
@@ -419,7 +419,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "GHID TV"
+msgstr "GHID NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
