--- a/skin.aeonmq5.isengardmod/language/Slovenian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Slovenian/strings.po
@@ -419,7 +419,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "TV VODIČ"
+msgstr "NEXT AIRED VODIČ"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
