--- a/skin.aeonmq5.isengardmod/language/Spanish (Mexico)/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Spanish (Mexico)/strings.po
@@ -425,7 +425,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "GUÍA TV"
+msgstr "GUÍA NEXT AIRED"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
