--- a/skin.aeonmq5.isengardmod/language/Ukrainian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Ukrainian/strings.po
@@ -420,7 +420,7 @@ msgstr "CINEMA EX"
 
 msgctxt "#31067"
 msgid "TV GUIDE"
-msgstr "ТЕЛЕПРОГРАМА"
+msgstr " NEXT AIRED ПРОГРАМА"
 
 msgctxt "#31068"
 msgid "VIEWTYPES"
