Incremental update to 7.1.11

--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -1,3 +1,8 @@
+[B][COLOR=FFFF8C00]BUILD 7.1.11 - RELEASE DATE 08/15/2015[/COLOR][/B]
+Added:  Support for Hungarian language charaters in all caps font
+Fixed:  Advanced Filter radio button in top menu
+Fixed:  Subtitles - manual search button
+
 [B][COLOR=FFFF8C00]BUILD 7.1.10 - RELEASE DATE 07/15/2015[/COLOR][/B]
 Added:  Music case view now avalable in wall view
 Fixed:  Corrected labels for Rom Collection Browser
