Mid List view mod

--- a/skin.aeonmq5.isengardmod/language/Chinese/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Chinese/strings.po
@@ -2032,6 +2032,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr ""
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr ""
