--- a/skin.aeonmq5.isengardmod/language/Czech/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Czech/strings.po
@@ -2029,6 +2029,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "ZOBRAZIT TLAČÍTKO PRO RESET MOTIVU (DOČASNĚ)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "SOLO MÓD"
