--- a/skin.aeonmq5.isengardmod/language/French/strings.po
+++ b/skin.aeonmq5.isengardmod/language/French/strings.po
@@ -2037,6 +2037,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "MONTRER LE BOUTON POUR LE RÉINITIALISER L’ENVIRONNEMENT GRAPHIQUE (TEMPORAIRE)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "MODE SOLO"
