--- a/skin.aeonmq5.isengardmod/language/Hebrew/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Hebrew/strings.po
@@ -2030,6 +2030,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "הצג כפתור עבור אתחול מעטפת (זמני)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "מצב סולו"
