--- a/skin.aeonmq5.isengardmod/language/Italian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Italian/strings.po
@@ -2031,6 +2031,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "MOSTRA IL BOTTONE PER RESETTARE LO SKIN (TEMPORANEAMENTE)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "MODALITA' SOLO"
