--- a/skin.aeonmq5.isengardmod/language/Dutch/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Dutch/strings.po
@@ -2032,6 +2032,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "SKIN RESET KNOP TONEN (TIJDELIJK)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "SOLO MODE"
