--- a/skin.aeonmq5.isengardmod/language/Galician/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Galician/strings.po
@@ -2028,6 +2028,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "AMOSAR BOTÓN PARA RESTABELECER O TEMA (TEMPORALMENTE)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "MODO SOLO"
