--- a/skin.aeonmq5.isengardmod/language/Icelandic/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Icelandic/strings.po
@@ -2029,6 +2029,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "SÝNA TAKA TIL AÐ ENDURSETJA ÚTLIT (TÍMABUNDIÐ)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "SÓLÓ HAMUR"
