--- a/skin.aeonmq5.isengardmod/language/Lithuanian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Lithuanian/strings.po
@@ -2034,6 +2034,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "RODYTI TEMOS ATSTATYMO MYGTUKĄ (LAIKINAI)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "SOLO REŽIMAS"
