--- a/skin.aeonmq5.isengardmod/language/Spanish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Spanish/strings.po
@@ -2034,6 +2034,10 @@ msgctxt "#31447"
 msgid "SHOW BUTTON FOR RESET SKIN (TEMPORARY)"
 msgstr "MOSTRAR BOTON PARA REINICIAR SKIN (TEMPORALMENTE)"
 
+msgctxt "#31448"
+msgid "MID LIST"
+msgstr "MID LIST"
+
 msgctxt "#31449"
 msgid "SOLO MODE"
 msgstr "MODO SOLO"
