--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -3,6 +3,7 @@ Added:  Support for Hungarian language charaters in all caps font
 Fixed:  Advanced Filter radio button in top menu
 Fixed:  Subtitles - manual search button
 Added:  Mid List viewmode for video and audio
+Added:  For videos, if there is no disc art available, the poster (if assigned) will be used as a "pseudo-discart"
 
 [B][COLOR=FFFF8C00]BUILD 7.1.10 - RELEASE DATE 07/15/2015[/COLOR][/B]
 Added:  Music case view now avalable in wall view
