--- a/skin.aeonmq5.isengardmod/language/French/strings.po
+++ b/skin.aeonmq5.isengardmod/language/French/strings.po
@@ -2597,6 +2597,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "AJOUTER DU CONTENU EN OPTION"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "SAISON"
