--- a/skin.aeonmq5.isengardmod/language/Norwegian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Norwegian/strings.po
@@ -2588,6 +2588,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "LEGG TIL INNHOLD I VALGET"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "SESONG"
