--- a/skin.aeonmq5.isengardmod/language/Danish/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Danish/strings.po
@@ -2591,6 +2591,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "TILFØJ INDHOLD I INDSTILLINGER"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "SÆSON"
