--- a/skin.aeonmq5.isengardmod/language/Dutch/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Dutch/strings.po
@@ -2592,6 +2592,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "VOEG CONTENT TOE IN OPTIE"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "SEIZOEN"
