--- a/skin.aeonmq5.isengardmod/language/Hebrew/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Hebrew/strings.po
@@ -2590,6 +2590,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "הוסף תוכן באפשרות"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "עונה"
