--- a/skin.aeonmq5.isengardmod/language/Hindi/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Hindi/strings.po
@@ -2587,6 +2587,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "विकल्प में सामग्री जोड़ें "
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "सीजन "
