--- a/skin.aeonmq5.isengardmod/language/Korean/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Korean/strings.po
@@ -2589,6 +2589,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "옵션에서 콘텐트를 추가하세요"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "시즌"
