--- a/skin.aeonmq5.isengardmod/language/Lithuanian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Lithuanian/strings.po
@@ -2594,6 +2594,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ĮTRAUKTI TURINĮ SU PASIRINKIMU"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "SEZONAS"
