--- a/skin.aeonmq5.isengardmod/language/Portuguese (Brazil)/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Portuguese (Brazil)/strings.po
@@ -2587,6 +2587,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ADICIONE CONTEÚDO NA OPÇÃO"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "TEMPORADA"
