--- a/skin.aeonmq5.isengardmod/language/Russian/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Russian/strings.po
@@ -2596,6 +2596,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "ДОБАВИТЬ СОДЕРЖАНИЕ В ОПЦИЮ"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "СЕЗОН"
