--- a/skin.aeonmq5.isengardmod/language/Spanish (Argentina)/strings.po
+++ b/skin.aeonmq5.isengardmod/language/Spanish (Argentina)/strings.po
@@ -2593,6 +2593,10 @@ msgctxt "#31587"
 msgid "ADD CONTENT IN OPTION"
 msgstr "AGREGAR CONTENIDO EN OPCIÓN"
 
+msgctxt "#31588"
+msgid "USE DISC FOR TV SHOWS/SEASONS"
+msgstr "USE DISC FOR TV SHOWS/SEASONS"
+
 msgctxt "#31589"
 msgid "SEASON"
 msgstr "TEMPORADA"
