--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -6,6 +6,7 @@ Fix:  Dialog Add Source
 Fix:  Bad text label string assignment for "MID LIST"
 Added:  Option to allow/prevent display of pseudo-discart for TV Shows and Seasons
 Improved:  OSD menu for repeating the playlist label is changed from REPEAT to REPEAT OFF when off
+Improved:  OSD menu for randomizing the playlist label is changed from RANDOM to RANDOM OFF
 
 [B][COLOR=FFFF8C00]BUILD 7.1.11 - RELEASE DATE 08/15/2015[/COLOR][/B]
 Added:  Support for Hungarian language charaters in all caps font
