--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -1,3 +1,7 @@
+[B][COLOR=FFFF8C00]BUILD 7.1.13 - RELEASE DATE 10/01/2015[/COLOR][/B]
+Added:  Support for CinemaVision addon
+Fixed:  SmartPlaylistEditor.xml filename case
+
 [B][COLOR=FFFF8C00]BUILD 7.1.12 - RELEASE DATE 09/01/2015[/COLOR][/B]
 Fix:  Typo in incldue for initializing logoff menu
 Fix:  Low List view options missing for videos
