--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -1,4 +1,4 @@
-[B][COLOR=FFFF8C00]BUILD 7.1.13 - RELEASE DATE 10/15/2015[/COLOR][/B]
+[B][COLOR=FFFF8C00]BUILD 7.1.13 - RELEASE DATE 10/25/2015[/COLOR][/B]
 Added:  Support for CinemaVision addon
 Fixed:  SmartPlaylistEditor.xml filename case
 Improved:  System (shutdown) dialog playlist option and layout
@@ -8,6 +8,8 @@ Fixed:  Playlist button on OSD video and audio menus
 Improved:  Video playlist window now can select info bar
 Improved:  Video playlist window now can select info bar on/off
 Improved:  Video playlist buttons now available on top menu (like audio playlist)
+Improved:  Select dialog shows "now playing" video in background
+Improved:  Midlist view now allows optional use of clearart on right
 
 [B][COLOR=FFFF8C00]BUILD 7.1.12 - RELEASE DATE 09/01/2015[/COLOR][/B]
 Fix:  Typo in incldue for initializing logoff menu
