--- a/skin.aeonmq5.isengardmod/changelog.txt
+++ b/skin.aeonmq5.isengardmod/changelog.txt
@@ -15,6 +15,8 @@ Fixed:  Removed opensubtitles and cinema experience from rquired addons
 Improved:  Cinema Experience submenu item will now request user to install it (if not already installed)
 Improved:  OK dialog now has visible OK button to click/close dialog
 Fixed:  Vertical alignment of main menu items
+Fixed:  TVTunes interface for TVTunes 5.0 and up
+Fixed:  Tag cleanup
 
 [B][COLOR=FFFF8C00]BUILD 7.1.12 - RELEASE DATE 09/01/2015[/COLOR][/B]
 Fixed:  Typo in incldue for initializing logoff menu
